13943
For most other purposes the types {{A with B}} and {{B with A}} are treated as being equivalent: 
{code}
scala> trait A 
defined trait A

scala> trait B
defined trait B

scala> val x : A with B = null
x: A with B = null

scala> val y : B with A = x
y: B with A = null

scala> val z : A with B = y
z: A with B = null


scala> trait C { val x : A with B }                   
defined trait C

scala> trait D extends C { override val x : B with A }
defined trait D

scala> trait E extends D { override val x : A with B }
defined trait E
{code}
However, when it comes to type definitions they are not considered equivalent:
{code}
scala> trait F { type T = A with B }
defined trait F

scala> trait G extends F { override type T = B with A }
<console>:7: error: error overriding type T in trait F, which equals A with B;
 type T has incompatible type B with A
       trait G extends F { override type T = B with A }
                                         ^

scala> trait F { type T = B with A }                   
defined trait F

scala> trait G extends F { override type T = A with B }
<console>:7: error: error overriding type T in trait F, which equals B with A;
 type T has incompatible type A with B
       trait G extends F { override type T = A with B }
                                         ^
{code} 
